CSS change to stop shifting due to scrollbar

--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,8 @@
+html {
+  overflow-y: scroll;
+}
+
+
 body {
 	background: #f5f5f5;
 }
